--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,22 @@
 /au/
+/2playerButton.PNG
+/3playerButton.PNG
+/addshapeButton.PNG
+/backButton.PNG
+/guessButton.PNG
+/highScoreButton.PNG
+/instrustionButton.PNG
+/labelEnterName.PNG
+/logo.PNG
+/newButton.PNG
+/no_player2.PNG
+/no_player3.PNG
+/player1Label.PNG
+/player2Label.PNG
+/player3Label.PNG
+/quitButton.PNG
+/quitGameButton.PNG
+/roundLabel.PNG
+/startButton.PNG
+/startButton2.PNG
+/traceButton.PNG
